# EP2025_Rambo_Python

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  dodo.py  log_config.yaml  pyproject.toml
.github/: README.md
.github/workflows/: ci.yml
data/: bkg.csv  bkg.txt  bkg2.csv  bkg2.txt  co60.csv  co60.txt  cs137.csv  cs137.txt  na22.csv  na22.txt  pmt.csv  pmt.txt  steel.csv  steel.txt
env/: bashrc.sh  python_startup.py
